2005-09-10  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdesextension.make.ave: Version number is 2.12.2+cvs now
	* dcwates.project.splitmodel.ave: Added option to create views

2005-09-08  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml:
	* dcwatdes.model.epanet.loadresultsforstep.ave:
	* dcwatdes.project.extractmodel.ave:
	* dcwatdes.project.splitmodel.ave: Now calling .updateDefBitmap after
	each setDefinition() call. Fixes a critical bug (shapefile changes).
	* build.xml:
	* dcwatdesextension.make.ave: Version number 2.12.2 now.

2005-09-01  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml:
	* dcwatdes.table.calculatebitcode.ave: Added more calculation options
	* dcwatdes.model.epanet.writeinpfile.ave: Collapsing valve.setting
	values that contain "closed" to "closed"
	* dcwatdes.dialog.epanetthemes.initialize.ave: better initial theme
	selection
	
2005-08-31  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.bitcode.or.ave:
	* dcwatdes.bitcode.xor.ave: Don't drop "1"'s if one of the input
	strings is shorter.
	* dcwatdes.table.calculatebitcode.ave: Allow to select Bitcode.xor
	to build up the pattern.
	
2005-08-19  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.dialog.setup.btnok.click.ave:
	* dialog/dcwatdes.dialog.setup.ded:
	* dcwatdes.i18n.createdictionaries.ave:
	* dcwatdes.model.epanet.ensurealiases.ave:
	* dcwatdes.model.epanet.pipe.updatenodefields.ave:
	* doc/en/dcwaterdesign.xml: New setup option "Enforce Data Model",
	implements RFE #1263010
	* build.xml: Fixed version number replacement in documentation, 
	building documentation, checking that extension has correct version 
	number
	* doc/build.xml:
	* doc/docbook_pdf.xsl: Using SVG icons

2005-08-18  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml: Fixed Version number replacement in NSIS file;
	included installer build
	* dcwaterdesignextension.make.ave: Version number is now 2.12.1+cvs
	* dcwatdes.bitcode.or.ave: