@@ -71,7 +71,22 @@ thmJunction = dicThemes.get("Junctions")
 ftbJunction = thmJunction.getFTab
 fldHasDemand = ftbJunction.findField("HasDemand")
 
-for each numI in 0..(numWidth-1)
+lstBitcodes = List.make
+
+for each i in 0 .. (numWidth-1)
+  i.setName((i+1).asString)
+  lstBitcodes.add(i)
+end
+
+lstSet = MsgBox.multiList(lstBitcodes, "Choose the model(s) to extract."+NL+"Selecting Cancel will extract all.", "DC Water Design")
+if(lstSet = nil)then
+  lstSet = List.make
+  for each i in 0..(numWidth)
+    lstSet.add(i)
+  end
+end
+
+for each numI in lstSet
   flnZoneDirectory = FileName.merge(flnBaseDirectory.getFullName, "model\"+(numI+1).asString)
   av.run("DCWatDes.System.makeDir", flnZoneDirectory.getFullName)
   if(blnCreateViews)then
@@ -82,15 +97,12 @@ for each numI in 0..(numWidth-1)
   ' Loop over all themes
   for each thmTheme in dicThemes
     ftbTheme = thmTheme.getFTab
-    strOldDefinition = ftbTheme.getDefinition.clone
     strDefinition = "[ByteCode].middle("+numI.asString+",1)=""1"""
     ftbTheme.setDefinition(strDefinition)
     ftbTheme.updateDefBitmap
     if(ftbTheme.getNumRecords > 0)then
       flnThemeName = FileName.merge(flnZoneDirectory.getFullName, ftbTheme.getSrcName.getFileName.getBaseName)
       ftbExtracted = ftbTheme.export(flnThemeName, ftbTheme.getShapeClass, false)
-      ftbTheme.setDefinition(strOldDefinition)
-      ftbTheme.updateDefBitmap
       if(blnCreateViews)then
         thmExtracted = FTheme.make(ftbExtracted)
         viewModel.addTheme(thmExtracted)
@@ -109,8 +121,6 @@ for each numI in 0..(numWidth-1)
       flnThemeName = flnThemeName.getFullName.substitute("junction", "junctiondemand").asFileName
       ftbExtracted = ftbJunction.export(flnThemeName, ftbJunction.getShapeClass, false)
     end
-    ftbJunction.setDefinition(strOldDefinition)
-    ftbJunction.updateDefBitmap
   end
 end
 for each thmTheme in dicThemes
