@@ -1,3 +1,12 @@
+2005-09-13  Steffen Macke <Steffen_Macke@dorsch.com.jo>
+
+	* doc/en/dcwaterdesign.xml: Updated with latest information.
+	* dcwatdes.project.mergemodel.ave:
+	* dcwatdes.project.splitmodel.ave: clearing the selection first
+	* dcwatdes.project.extractmodel.ave: Allow to select models to extract
+	* dcwatdes.table.calculatebitcode.ave: Bytecode numbering starts at 1
+	instead of 0 now.
+	
 2005-09-10  Steffen Macke <Steffen_Macke@dorsch.com.jo>
 
 	* dcwatdesextension.make.ave: Version number is 2.12.2+cvs now
